test fixes